docs: 记录 spotless 对齐与 record 单行规范